2010-07-12  Jaroslav Hajek  <highegg@gmail.com>

	* unwind-prot.h (unwind_protect::fcn_crefarg_elem): New class.
	(unwind_protect::add_fcn (void (*) (const T&), T)): New method
	overload.

2010-07-08  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/__magick_read__,cc (F__magick_read__): Add the syntax
	__magick_read__ ("file", "frames", "all").

2010-07-08  Rik <octave@nomad.inbox5.com>

	* DLD_FUNCTIONS/eigs.cc: Initialize random number generator in test
        blocks to get reproducible results.

2010-07-08  Jaroslav Hajek  <highegg@gmail.com>

	* ov-cell.cc (Fstruct2cell): Use octave_map. Optimize.

2010-07-07  Rik <octave@nomad.inbox5.com>

	* pr-output.cc (calc_scale_exp): Avoid use of % operator on negative
        operands for portability between C++ compilers.
        (engineering_exponent): Avoid use of % operator.  Keep calculation of
        exponent within pr_engineering_float class.  (encapsulation).
        (num_digits): Rename from calc_digits.  Return true number of digits =
        1 + calc_digits.
        (calc_scale_exp): Rename from maybe_mod3 for readability.
        (operator << (... pr_engineering_float pef): Use pef abbreviation for
        pr_engineering_float.

2010-07-07  David Bateman  <dbateman@free.fr>

	* graphics.h.in (axes): Add hidden property __hold_all.

2010-07-07  Jaroslav Hajek  <highegg@gmail.com>

	* ov-class.h (octave_class::map): Turn to octave_map.
	* ov-class.cc (octave_class): Update methods.
	* ov-base.h, ov-base.cc (octave_base_value::old_map_value) : Remove.
	* ov.h, ov.cc (octave_value::old_map_value) : Remove.

2010-07-06  David Bateman  <dbateman@free.fr>

	* pr-output.cc (static bool print_eng): Flag engineering format,
	(float_format::float_format (int, int, int, int)): New constructor.
	(int float_format::ex): New field in the class.
	(static int maybe_mod3 (const int&), static int
	engineering_exponent (const double&),
	static int calc_digits (const double&)): New functions